almacenar fact_c actualizar la inv_bodega_art pintar datatable solo cuando la lista contenga registros buscar cliente por codigo