@@ -12,7 +12,13 @@ import com.sire.entities.CxcCliente;
 import com.sire.entities.FacCatalogoPrecioD;
 import com.sire.entities.FacDescVol;
 import com.sire.entities.FacDescVolPK;
+import com.sire.entities.FacParametros;
+import com.sire.entities.FacTmpFactC;
+import com.sire.entities.FacTmpFactCPK;
+import com.sire.entities.FacTmpFactD;
+import com.sire.entities.FacTmpFactDPK;
 import com.sire.entities.GnrDivisa;
+import com.sire.entities.GnrUsuarios;
 import com.sire.entities.InvArticulo;
 import com.sire.entities.InvBodegaArt;
 import com.sire.entities.InvBodegaArtPK;
@@ -24,34 +30,26 @@ import com.sire.entities.InvMovimientoDtll;
 import com.sire.entities.InvMovimientoDtllPK;
 import com.sire.entities.InvTransacciones;
 import com.sire.entities.InvUnidadAlternativa;
+import com.sire.entities.Pedido;
 import com.sire.entities.VCliente;
-import com.sire.exception.ClienteException;
 import com.sire.exception.EmptyException;
 import com.sire.rs.client.FacCatalogoPrecioDFacadeREST;
 import com.sire.rs.client.FacDescVolFacadeREST;
+import com.sire.rs.client.FacParametrosFacadeREST;
 import com.sire.rs.client.GnrContadorDocFacadeREST;
 import com.sire.rs.client.InvArticuloFacadeREST;
-import com.sire.rs.client.InvBodegaArtFacadeREST;
 import com.sire.rs.client.InvIvaFacadeREST;
 import com.sire.rs.client.InvMovimientoCabFacadeREST;
 import com.sire.rs.client.InvUnidadAlternativaFacadeREST;
 import com.sire.rs.client.VClienteFacadeREST;
 import com.sire.utils.Round;
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import com.sire.utils.bodega.BodegaUtil;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Collections;
-import static java.util.Collections.list;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.Locale;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.faces.application.FacesMessage;
@@ -60,7 +58,6 @@ import javax.faces.bean.ManagedBean;
 import javax.faces.bean.ManagedProperty;
 import javax.faces.bean.SessionScoped;
 import javax.faces.context.FacesContext;
-import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.ClientErrorException;
 import lombok.Getter;
 import lombok.Setter;
@@ -77,51 +74,59 @@ import org.primefaces.mobile.event.SwipeEvent;
 @Getter
 @Setter
 public class ArticulosBean {
-
+    
     private static final Logger logger = Logger.getLogger(ArticulosBean.class.getName());
-
+    
     private final InvArticuloFacadeREST invArticuloFacadeREST;
     private final VClienteFacadeREST vClienteFacadeREST;
     private final FacDescVolFacadeREST facDescVolFacadeREST;
     private final InvMovimientoCabFacadeREST invMovimientoCabFacadeREST;
     private final InvIvaFacadeREST invIvaFacadeREST;
     private final InvUnidadAlternativaFacadeREST invUnidadAlternativaFacadeREST;
+    private final FacParametrosFacadeREST facParametrosFacadeREST;
     private final GsonBuilder builder;
     private final Gson gson;
     private String input;
     private List<InvArticulo> articulos;
     private List<InvMovimientoDtll> invMovimientoDtlls;
+    private FacTmpFactC facTmpFactC;
+    private List<FacTmpFactD> facTmpFactDs;
     private InvMovimientoCab invMovimientoCab;
     private InvMovimientoDtll invMovimientoDtllSeleccionado;
+    private String formaPago;
 
     //
     private Double existencia;
-    private boolean agregarBloqueado;
+    private boolean agregarBloqueado = true;
 
     // Atributos de articulo a ser agregado a la lista
     private String codInventario;
     private int codArticulo;
     private InvArticulo invArticuloSeleccionado;
     private Double totalIVA;
-    private String ubicacion;
-
+    
     private FacCatalogoPrecioD facCatalogoPrecioD;
-
+    
     @ManagedProperty(value = "#{user}")
     private UserManager userManager;
     @ManagedProperty("#{cliente}")
     private CustomerBean cliente;
     @ManagedProperty("#{customers}")
     private CustomersBean clientes;
+    @ManagedProperty("#{mapa}")
+    private MapaBean mapa;
 
     //Resumen
-    Double subTotal, iva, total;
+    Double subTotal, iva, total, totalSinIva, totalConIva;
 
     //Mensaje
-    private String cantidadExedida;
-
+    private String cantidadExcedida, colorCantidadExcedida = "black";
+    
     public ArticulosBean() {
         codInventario = "01";
+        facTmpFactC = new FacTmpFactC();
+        facTmpFactDs = new ArrayList<>();
+        facTmpFactC.setFacTmpFactDList(facTmpFactDs);
         invMovimientoDtlls = new ArrayList<>();
         invMovimientoCab = new InvMovimientoCab();
         invMovimientoCab.setInvMovimientoDtllList(invMovimientoDtlls);
@@ -131,142 +136,151 @@ public class ArticulosBean {
         invMovimientoCabFacadeREST = new InvMovimientoCabFacadeREST();
         invIvaFacadeREST = new InvIvaFacadeREST();
         invUnidadAlternativaFacadeREST = new InvUnidadAlternativaFacadeREST();
+        facParametrosFacadeREST = new FacParametrosFacadeREST();
         builder = new GsonBuilder();
         gson = builder.setDateFormat("yyyy-MM-dd'T'HH:mm:ss").create();
     }
 
     // Medotos del negocio
     public void findArticulos() {
-        logger.info("Invocando findArticulos: " + input);
-
+        logger.log(Level.INFO, "Invocando findArticulos: {0}", input);
+        
         String articulosString;
-        String codEmpresa = userManager.getGnrEmpresa().getCodEmpresa();
+        String codEmpresa = obtenerEmpresa();
         try {
-            articulosString = invArticuloFacadeREST.findParaVenta(String.class, input.toUpperCase().replace("%AC", "$WC"), codEmpresa);
+            articulosString = invArticuloFacadeREST.findParaVenta(String.class, input.toUpperCase(Locale.ENGLISH).replace("%AC", "$WC"), codEmpresa);
             articulos = gson.fromJson(articulosString, new TypeToken<java.util.List<InvArticulo>>() {
             }.getType());
-            System.out.println("# articulos: " + articulos.size());
+            logger.log(Level.INFO, "# articulos: {0}", articulos.size());
         } catch (ClientErrorException cee) {
             articulos = null;
         }
     }
-
+    
     public void tapArticulo(SelectEvent event) {
+        logger.log(Level.INFO, "\u00b7\u00b7 tapArticulo \u00b7\u00b7 {0}", event.getObject());
+        
         invArticuloSeleccionado = ((InvArticulo) event.getObject());
-        System.out.println("Articulo seleccionado: " + invArticuloSeleccionado.getNombreArticulo());
-        logger.info("codUnidad: " + invArticuloSeleccionado.getCodUnidad().getCodUnidad());
+        logger.log(Level.INFO, "Articulo seleccionado: {0}", invArticuloSeleccionado.getNombreArticulo());
+        logger.log(Level.INFO, "codUnidad: {0}", invArticuloSeleccionado.getCodUnidad().getCodUnidad());
         setCodArticulo(invArticuloSeleccionado.getInvArticuloPK().getCodArticulo());
-
+        
         InvMovimientoDtll invMovimientoDtll = new InvMovimientoDtll();
 
         // TODO cargar esta bodega
         InvBodegaArt invBodegaArt = new InvBodegaArt();
         InvBodegaArtPK invBodegaArtPK = new InvBodegaArtPK();
-
-        invBodegaArtPK.setCodEmpresa(userManager.getGnrEmpresa().getCodEmpresa());
-
+        
+        invBodegaArtPK.setCodEmpresa(obtenerEmpresa());
+        
         invBodegaArtPK.setCodArticulo(invArticuloSeleccionado.getInvArticuloPK().getCodArticulo());
-
+        
         invBodegaArt.setInvBodegaArtPK(invBodegaArtPK);
         invBodegaArt.setExistencia(BigDecimal.ZERO);
         invBodegaArt.setExistPendEnt(BigDecimal.ZERO);
         invBodegaArt.setExistPendSal(BigDecimal.ZERO);
         InvMovimientoDtllPK invMovimientoDtllPK = new InvMovimientoDtllPK();
-        invMovimientoDtllPK.setCodEmpresa(userManager.getGnrEmpresa().getCodEmpresa());
+        invMovimientoDtllPK.setCodEmpresa(obtenerEmpresa());
         invMovimientoDtllPK.setCodDocumento("SAI");
         int count = invMovimientoDtlls.size() + 1;
         invMovimientoDtll.setPosicion(count);
-        invMovimientoDtllPK.setNumLinea(new Short(String.valueOf(count)));
+        invMovimientoDtllPK.setNumLinea(Short.valueOf(String.valueOf(count)));
         invMovimientoDtllPK.setNumDocumento(0);
-
+        
         invMovimientoDtll.setInvMovimientoDtllPK(invMovimientoDtllPK);
-
+        
         invMovimientoDtll.setInvBodegaArt(invBodegaArt);
         invMovimientoDtll.setInvArticulo(invArticuloSeleccionado);
         invMovimientoDtll.setCodUnidad(invArticuloSeleccionado.getCodUnidad().getCodUnidad());
-
-        if (invArticuloSeleccionado.getExistencia().intValue() > 0) {
-            logger.info("Pos: " + invMovimientoDtll.getPosicion());
-            logger.info("CodEmpresa:" + invMovimientoDtll.getInvMovimientoDtllPK().getCodEmpresa());
-            logger.info("CodDocumento:" + invMovimientoDtll.getInvMovimientoDtllPK().getCodDocumento());
-            logger.info("NumDocumento: " + invMovimientoDtll.getInvMovimientoDtllPK().getNumDocumento());
-            logger.info("NumLinea: " + invMovimientoDtll.getInvMovimientoDtllPK().getNumLinea());
-
+        
+        if (invArticuloSeleccionado.getExistencia().doubleValue() > 0) {
             invMovimientoDtlls.add(invMovimientoDtll);
+            input = null;
+            articulos.clear();
+            RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticles:buscar");
+            RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticles:dataListArticulo");
+        } else {
+            addMessage("Advertencia", "Producto no disponible", FacesMessage.SEVERITY_INFO);
         }
     }
-
+    
     public void tapArticuloFinal(SelectEvent event) {
-        setInvMovimientoDtllSeleccionado(((InvMovimientoDtll) event.getObject()));
-        InvMovimientoDtll invMovimientoDtll = obtenerMovimientoSeleccionado();
-
-        String codArticulo = String.valueOf(invMovimientoDtll.getInvBodegaArt().getInvBodegaArtPK().getCodArticulo());
-        logger.log(Level.INFO, "Articulo seleccionado final: {0}", codArticulo);
-
-        String codEmpresa = userManager.getGnrEmpresa().getCodEmpresa();
-
-        StringBuilder id = new StringBuilder();
-
-        id.append("find;codEmpresa=");
-        id.append(codEmpresa);
-        id.append(";codCatalogo=01;codArticulo=");
-        id.append(codArticulo);
-
-        FacCatalogoPrecioDFacadeREST facCatalogoPrecioDFacadeREST = new FacCatalogoPrecioDFacadeREST();
-        String response = facCatalogoPrecioDFacadeREST.find_JSON(String.class, id.toString());
-
-        facCatalogoPrecioD = gson.fromJson(response, new TypeToken<FacCatalogoPrecioD>() {
-        }.getType());
-
-        invMovimientoDtll.setPrecioVenta(facCatalogoPrecioD.getPrecioVenta1());
-
-        logger.info("invMovimientoDtll.getPrecioVenta(): " + invMovimientoDtll.getPrecioVenta());
-
-        if (invArticuloSeleccionado.getDescuento() == null) {
-            invArticuloSeleccionado.setDescuento(buscarDescuento());
+        try {
+            setInvMovimientoDtllSeleccionado(((InvMovimientoDtll) event.getObject()));
+            InvMovimientoDtll invMovimientoDtll = obtenerMovimientoSeleccionado();
+            
+            String codArticle = String.valueOf(invMovimientoDtll.getInvBodegaArt().getInvBodegaArtPK().getCodArticulo());
+            logger.log(Level.INFO, "Articulo seleccionado final: {0}", codArticle);
+            
+            String codEmpresa = obtenerEmpresa();
+            
+            StringBuilder id = new StringBuilder();
+            
+            id.append("find;codEmpresa=");
+            id.append(codEmpresa);
+            id.append(";codCatalogo=01;codArticulo=");
+            id.append(codArticle);
+            
+            FacCatalogoPrecioDFacadeREST facCatalogoPrecioDFacadeREST = new FacCatalogoPrecioDFacadeREST();
+            String response = facCatalogoPrecioDFacadeREST.find_JSON(String.class, id.toString());
+            
+            facCatalogoPrecioD = gson.fromJson(response, new TypeToken<FacCatalogoPrecioD>() {
+            }.getType());
+            
+            invMovimientoDtll.setPrecioVenta(facCatalogoPrecioD.getPrecioVenta1());
+            
+            logger.log(Level.INFO, "invMovimientoDtll.getPrecioVenta(): {0}", invMovimientoDtll.getPrecioVenta());
+            
+            if (invArticuloSeleccionado.getDescuento() == null) {
+                if (obtenerCliente() != null) {
+                    invArticuloSeleccionado.setDescuento(buscarDescuento());
+                }
+            }
+            
+            invArticuloSeleccionado.setIva(findIva());
+            
+            loadPrecioUnitarioByUnidadMedida();
+        } catch (EmptyException ex) {
+            addMessage("Advertencia", ex.getMessage(), FacesMessage.SEVERITY_INFO);
         }
-
-        invArticuloSeleccionado.setIva(findIva());
-
-        loadPrecioUnitarioByUnidadMedida();
     }
-
+    
     public void swipeleft(SwipeEvent event) {
         setInvMovimientoDtllSeleccionado(((InvMovimientoDtll) event.getData()));
         InvMovimientoDtll invMovimientoDtll = obtenerMovimientoSeleccionado();
-
-        logger.info("Posicion: " + invMovimientoDtll.getPosicion());
-
-        InvMovimientoDtll forDelete = null;
+        
+        logger.log(Level.INFO, "Posicion: {0}", invMovimientoDtll.getPosicion());
+        
+        InvMovimientoDtll forDelete;
         for (InvMovimientoDtll invMovimientoDtll1 : invMovimientoDtlls) {
             if (invMovimientoDtll1.getPosicion() == invMovimientoDtll.getPosicion()) {
                 forDelete = invMovimientoDtll1;
+                invMovimientoDtlls.remove(forDelete);
+                logger.log(Level.INFO, "Articulo removido: {0}", forDelete.getPosicion());
+                
                 break;
             }
         }
-
-        invMovimientoDtlls.remove(forDelete);
-        logger.log(Level.INFO, "Articulo removido: {0}", forDelete.getPosicion());
-
+        
         if (invMovimientoDtll.getCantidad() != null) {
             calcularResumen();
         }
     }
-
+    
     public void loadInventariosByBodega() {
         RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:inv");
     }
-
+    
     public void calcularTotalRegistro() {
         RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:totalRegistro");
     }
-
+    
     public void agregarArticulo() {
         InvMovimientoDtll movimientoSeleccionado = obtenerMovimientoSeleccionado();
         String codBodega = movimientoSeleccionado.getInvBodegaArt().getInvBodegaArtPK().getCodBodega();
         String codUnidad = movimientoSeleccionado.getCodUnidad();
         BigDecimal cantidad = movimientoSeleccionado.getCantidad();
-
+        
         logger.info("Articulo a ser agregado: ");
         logger.log(Level.INFO, "codBodega: {0}", codBodega);
         logger.log(Level.INFO, "codInventario: {0}", codInventario);
@@ -313,81 +327,94 @@ public class ArticulosBean {
                     auxCantidad = cantidad.intValue() / facCatalogoPrecioD.getFactor().intValue();
                 }
                 break;
+            default:
+                break;
         }
         logger.log(Level.INFO, "5::: {0}", auxCantidad);
         movimientoSeleccionado.setAuxCantidad(BigInteger.valueOf(auxCantidad));
+        movimientoSeleccionado.setFactor(facCatalogoPrecioD.getFactor());
         movimientoSeleccionado.setValorCompra(BigInteger.ZERO);
-
-        movimientoSeleccionado.setPorcDesc1(movimientoSeleccionado.getPorcDesc1());
+        
+        BigDecimal porcDesc1 = movimientoSeleccionado.getPorcDesc1();
+        if (porcDesc1 != null) {
+            movimientoSeleccionado.setPorcDesc1(porcDesc1);
+        } else {
+            movimientoSeleccionado.setPorcDesc1(BigDecimal.ZERO);
+        }
         movimientoSeleccionado.setPorcDesc2(BigDecimal.ZERO);
         movimientoSeleccionado.setPorcDesc3(BigDecimal.ZERO);
         movimientoSeleccionado.setDescuento(invArticuloSeleccionado.getDescuento());
         movimientoSeleccionado.setPorcentajeIva(invArticuloSeleccionado.getIva());
-
-        InvInventario invInventario = new InvInventario(userManager.getGnrEmpresa().getCodEmpresa(), codBodega, codInventario);
+        
+        InvInventario invInventario = new InvInventario(obtenerEmpresa(), codBodega, codInventario);
         movimientoSeleccionado.getInvBodegaArt().setInvInventario(invInventario);
-
+        
         calcularResumen();
 
         // TODO terminar el mapeo
         RequestContext
-                .getCurrentInstance().update("pedido:accordionPanel:formTablaArticulos:tablaArticulos");
-
+                .getCurrentInstance().update("pedido:accordionPanel:formTablaArticulos");
+        
     }
-
+    
     public void loadPrecioTotalByCantidad() {
-        logger.info("precio venta: " + invArticuloSeleccionado.getPrecio());
-
+        logger.log(Level.INFO, "precio venta: {0}", invArticuloSeleccionado.getPrecio());
+        
         InvMovimientoDtll movimientoSeleccionado = obtenerMovimientoSeleccionado();
-
-        logger.info("invArticuloSeleccionado.getExistencia().intValue(): " + invArticuloSeleccionado.getExistencia().intValue());
-        logger.info("movimientoSeleccionado.getCantidad().intValue(): " + movimientoSeleccionado.getCantidad().intValue());
-
-        if (getExistencia().intValue() >= movimientoSeleccionado.getCantidad().intValue()) {
+        
+        Double existence = this.existencia;
+        logger.log(Level.INFO, "existencia: {0}", existence);
+        
+        BigDecimal cantidad = movimientoSeleccionado.getCantidad();
+        logger.log(Level.INFO, "cantidad: {0}", cantidad.doubleValue());
+        if (existence >= cantidad.doubleValue()) {
+            
             Double precioTotal;
             Double descuento = 0.0;
             if (invArticuloSeleccionado.getDescuento() != null) {
-                descuento = (movimientoSeleccionado.getCostoUnitario() * movimientoSeleccionado.getCantidad().intValue() * invArticuloSeleccionado.getDescuento().intValue()) / 100;
+                descuento = (movimientoSeleccionado.getCostoUnitario() * cantidad.doubleValue() * invArticuloSeleccionado.getDescuento().doubleValue()) / 100;
             }
-
-            logger.info("descuento: " + descuento);
-
-            precioTotal = (movimientoSeleccionado.getCostoUnitario() * movimientoSeleccionado.getCantidad().intValue()) - descuento;
-
+            
+            logger.log(Level.INFO, "descuento: {0}", descuento);
+            
+            precioTotal = (movimientoSeleccionado.getCostoUnitario() * cantidad.doubleValue()) - descuento;
+            
             precioTotal = Round.round(precioTotal, 2);
-
-            logger.info("precioTotal: " + precioTotal);
+            
+            logger.log(Level.INFO, "precioTotal: {0}", precioTotal);
             movimientoSeleccionado.setCostoTotal(precioTotal);
-
+            
             Double totalPlusIVA = precioTotal * (1 + invArticuloSeleccionado.getIva().doubleValue() / 100);
-            logger.info("totalPlusIVA: " + totalPlusIVA);
+            logger.log(Level.INFO, "totalPlusIVA: {0}", totalPlusIVA);
             invArticuloSeleccionado.setTotalPlusIVA(totalPlusIVA);
-
+            
             agregarBloqueado = false;
-
+            
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:totalRegistro");
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:totalIva");
-            cantidadExedida = "";
+            cantidadExcedida = "";
+            colorCantidadExcedida = "black";
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:cantidadLabel");
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:botonAgregar");
-
+            
         } else {
-            cantidadExedida = "Cantidad Excedida";
-
+            cantidadExcedida = "Excedida";
+            colorCantidadExcedida = "red";
+            
             movimientoSeleccionado.setCantidad(null);
             movimientoSeleccionado.getInvBodegaArt().getInvBodegaArtPK().setCodBodega(null);
             movimientoSeleccionado.setCostoTotal(null);
             invArticuloSeleccionado.setTotalPlusIVA(null);
-
+            
             agregarBloqueado = true;
-
+            
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:totalRegistro");
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:totalIva");
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:cantidadLabel");
             RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:botonAgregar");
         }
     }
-
+    
     public void loadPrecioUnitarioByUnidadMedida() {
         InvMovimientoDtll invMovimientoDtll = obtenerMovimientoSeleccionado();
         String codUnidad;
@@ -396,11 +423,11 @@ public class ArticulosBean {
         } else {
             codUnidad = obtenerMovimientoSeleccionado().getCodUnidad();
         }
-        String codEmpresa = userManager.getGnrEmpresa().getCodEmpresa();
-        int codArticulo = invMovimientoDtll.getInvArticulo().getInvArticuloPK().getCodArticulo();
-
+        String codEmpresa = obtenerEmpresa();
+        int codArticle = invMovimientoDtll.getInvArticulo().getInvArticuloPK().getCodArticulo();
+        
         StringBuilder id = new StringBuilder();
-
+        
         id.append("find;codEmpresa=");
         id.append(codEmpresa);
         id.append(";");
@@ -408,24 +435,24 @@ public class ArticulosBean {
         id.append(codUnidad);
         id.append(";");
         id.append("codArticulo=");
-        id.append(codArticulo);
+        id.append(codArticle);
         InvUnidadAlternativa invUnidadAlternativa = invUnidadAlternativaFacadeREST.find_JSON(InvUnidadAlternativa.class, id.toString());
-
+        invMovimientoDtll.setInvUnidadAlternativa(invUnidadAlternativa);
         BigDecimal auxPrecio = BigDecimal.ZERO;
         BigDecimal factor = BigDecimal.ZERO;
         String operador = "";
-
+        
         if (invUnidadAlternativa != null) {
             auxPrecio = facCatalogoPrecioD.getAuxPrecio();
             factor = invUnidadAlternativa.getFactor();
             operador = invUnidadAlternativa.getOperador();
         }
-
-        logger.info("auxPrecio: " + auxPrecio);
-        logger.info("factor: " + factor);
-        logger.info("operador: " + operador);
-
-        Double precio = 0.0;
+        
+        logger.log(Level.INFO, "auxPrecio: {0}", auxPrecio);
+        logger.log(Level.INFO, "factor: {0}", factor);
+        logger.log(Level.INFO, "operador: {0}", operador);
+        
+        Double precio;
         switch (operador) {
             case "+":
                 precio = auxPrecio.doubleValue() + factor.doubleValue();
@@ -446,329 +473,404 @@ public class ArticulosBean {
             default:
                 precio = auxPrecio.doubleValue();
         }
-
+        
         invMovimientoDtll.setCostoUnitario(Round.round(precio, 4));
-
-        logger.info("$$$$$$$$$$ precio venta: " + invMovimientoDtll.getCostoUnitario());
-
+        
+        logger.log(Level.INFO, "$$$$$$$$$$ precio venta: {0}", invMovimientoDtll.getCostoUnitario());
+        
         if (invMovimientoDtll.getCantidad() != null) {
             loadPrecioTotalByCantidad();
         }
-
+        
         RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:precioUnitario");
         RequestContext.getCurrentInstance().update("pedido:accordionPanel:formArticulo:existencia");
     }
-
+    
     public String enviar() {
         try {
-            CxcCliente cxcCliente = obtenerCliente();
-            invMovimientoCab.setCxcCliente(cxcCliente);
-
-            if (invMovimientoDtlls.isEmpty()) {
-                throw new EmptyException();
-            }
-
             GnrContadorDocFacadeREST gnrContadorDocFacadeREST = new GnrContadorDocFacadeREST();
             BigDecimal numDocumentoResp = gnrContadorDocFacadeREST.numDocumento(BigDecimal.class, "01", "03", "SAI");
-
-            InvMovimientoCabPK invMovimientoCabPK = new InvMovimientoCabPK();
-            invMovimientoCabPK.setCodEmpresa(userManager.getGnrEmpresa().getCodEmpresa());
-            invMovimientoCabPK.setCodDocumento("SAI");
-            invMovimientoCabPK.setNumDocumento(numDocumentoResp.longValue());
-            invMovimientoCab.setInvMovimientoCabPK(invMovimientoCabPK);
-            invMovimientoCab.setInvProveedor(null);
-
-            invMovimientoCab.setNumRetencion(null);
-            invMovimientoCab.setFechaEmision(Calendar.getInstance().getTime());
-            GnrDivisa gnrDivisa = new GnrDivisa("01", userManager.getGnrEmpresa().getCodEmpresa());
-            invMovimientoCab.setGnrDivisa(gnrDivisa);
-            invMovimientoCab.setReferencia("FAC");
-            InvTransacciones invTransacciones = new InvTransacciones(userManager.getGnrEmpresa().getCodEmpresa(), "20");
-            invMovimientoCab.setInvTransacciones(invTransacciones);
-            invMovimientoCab.setDetalle(new StringBuilder("FAC ").append(cliente.getCliente().getRazonSocial()).toString());
-            invMovimientoCab.setDigitadoPor(userManager.getUserName());
-            invMovimientoCab.setEstado("G");
-            invMovimientoCab.setTotalDocumento(BigInteger.ZERO);
-            invMovimientoCab.setDescuentos(BigInteger.ZERO);
-            invMovimientoCab.setFechaEstado(Calendar.getInstance().getTime());
-            invMovimientoCab.setOtrDescuentos(BigInteger.ZERO);
-            invMovimientoCab.setIva(BigInteger.ZERO);
-            invMovimientoCab.setRecargos(BigInteger.ZERO);
-            invMovimientoCab.setFletes(BigInteger.ZERO);
-            invMovimientoCab.setOtrCargos(BigInteger.ZERO);
-            invMovimientoCab.setRetencion(BigInteger.ZERO);
-            invMovimientoCab.setDiasPlazo(1);
-            invMovimientoCab.setFechaVencimiento(null);
-            invMovimientoCab.setNroCuotas(null);
-            invMovimientoCab.setTConIva(null);
-            invMovimientoCab.setTSinIva(null);
-            invMovimientoCab.setAutoContDoc(null);
-            invMovimientoCab.setAutoContImprDoc(null);
-            invMovimientoCab.setFechEmisDoc(null);
-            invMovimientoCab.setFechCaduDoc(null);
-            invMovimientoCab.setNumFactRete(null);
-
-            logger.log(Level.INFO, "enviar ::::::::::::::: {0} articulos", invMovimientoCab.getInvMovimientoDtllList().size());
-
-            Double subtotal = 0.0;
-            for (InvMovimientoDtll invMovimientoDtll : invMovimientoDtlls) {
-                InvBodegaArt invBodegaArt = invMovimientoDtll.getInvBodegaArt();
-
-                String codBodega = obtenerCodBodega(invMovimientoDtll.getInvArticulo().getInvArticuloPK().getCodArticulo());
-
-                logger.info("codBodega recuperado: " + codBodega);
-
-                invBodegaArt.getInvBodegaArtPK().setCodBodega(codBodega);
-
-                subtotal = subtotal + invMovimientoDtll.getCostoTotal();
-
-                InvMovimientoDtllPK invMovimientoDtllPK = new InvMovimientoDtllPK(userManager.getGnrEmpresa().getCodEmpresa(), "SAI", new Long(numDocumentoResp.longValue()), Short.valueOf(String.valueOf(invMovimientoDtlls.indexOf(invMovimientoDtll) + 1)));
-                invMovimientoDtll.setInvMovimientoDtllPK(invMovimientoDtllPK);
-
-                if (invMovimientoDtll.getInvMovimientoDtllPK() != null) {
-                    logger.log(Level.INFO, "InvMovimientoDtllPK: {0}", invMovimientoDtll.getInvMovimientoDtllPK().toString());
-                } else {
-                    logger.info("InvMovimientoDtllPK: null");
-                }
-            }
-
-            invMovimientoCab.setSubtotal(subtotal);
-
+            prepararInvMovimientoCab(numDocumentoResp);
+            prepararInvMovimientoDtlls(numDocumentoResp);
+            
+            prepararFacTmpFactC();
+            prepararFacTmpFactDs(numDocumentoResp);
+            
+            Pedido pedido = new Pedido();
+            
+            pedido.setFacTmpFactC(facTmpFactC);
+            pedido.setInvMovimientoCab(invMovimientoCab);
+            
             logger.info("Enviando Documento ...");
-            invMovimientoCabFacadeREST.create_JSON(invMovimientoCab);
+            invMovimientoCabFacadeREST.create_JSON(pedido);
             logger.info("Documento Enviado.");
-
+            
             limpiar();
-
+            
             addMessage("Pedido enviado exitosamente.", "Num. Pedido: " + numDocumentoResp, FacesMessage.SEVERITY_INFO);
             FacesContext context = FacesContext.getCurrentInstance();
             context.getExternalContext().getFlash().setKeepMessages(true);
             return "index?faces-redirect=true";
-        } catch (ClienteException ex) {
-            Logger.getLogger(ArticulosBean.class.getName()).log(Level.WARNING, "Por favor seleccione el cliente.");
-            addMessage("Advertencia", "Por favor seleccione el cliente.", FacesMessage.SEVERITY_INFO);
-            return "pedido?faces-redirect=true";
         } catch (EmptyException ex) {
-            Logger.getLogger(ArticulosBean.class.getName()).log(Level.WARNING, "Por favor seleccione al menos un artículo.");
-            addMessage("Advertencia", "Por favor seleccione al menos un artículo.", FacesMessage.SEVERITY_INFO);
+            logger.log(Level.SEVERE, ex.getMessage(), ex);
+            addMessage("Advertencia", ex.getMessage(), FacesMessage.SEVERITY_INFO);
             return "pedido?faces-redirect=true";
         } catch (NullPointerException ex) {
-            Logger.getLogger(ArticulosBean.class.getName()).log(Level.WARNING, "Por favor validar valor de registro(s).");
-            addMessage("Advertencia", "Por favor validar valor de registro(s).", FacesMessage.SEVERITY_INFO);
+            logger.log(Level.SEVERE, "Por favor validar registro(s).", ex);
+            addMessage("Advertencia", "Por favor validar registro(s).", FacesMessage.SEVERITY_INFO);
             return "pedido?faces-redirect=true";
         }
     }
-
-    public String getUbicacion() {
-        if (ubicacion == null) {
-            HttpServletRequest httpServletRequest = (HttpServletRequest) FacesContext.getCurrentInstance().getExternalContext().getRequest();
-
-            String command = "geoip " + httpServletRequest.getRemoteAddr();
-            logger.log(Level.INFO, "Command: {0}", command);
-            ubicacion = executeCommand(command);
-            logger.log(Level.INFO, "Ciudad:{0}", ubicacion);
-        }
-        return this.ubicacion;
-
+    
+    public void loadTipoPago() {
+        invMovimientoCab.setFormaPago(formaPago);
     }
-
-    private String executeCommand(String command) {
-
-        StringBuilder output = new StringBuilder();
-
-        Process p;
-        try {
-            p = Runtime.getRuntime().exec(command);
-            BufferedReader reader
-                    = new BufferedReader(new InputStreamReader(p.getInputStream()));
-
-            String line;
-            while ((line = reader.readLine()) != null) {
-                output.append(line);
-            }
-
-            int exitVal = p.waitFor();
-            logger.log(Level.INFO, "Exited with error code {0}", exitVal);
-            if (output.toString().isEmpty()) {
-                return "Check geoip.";
-            }
-        } catch (IOException | InterruptedException e) {
-            logger.log(Level.SEVERE, "{0}", e);
-        }
-
-        return output.toString();
-
-    }
-
+    
     private void addMessage(String summary, String detail, Severity severity) {
         FacesMessage message = new FacesMessage(severity, summary, detail);
         FacesContext.getCurrentInstance().addMessage(null, message);
     }
-
+    
     private void limpiar() {
         codArticulo = 0;
         invArticuloSeleccionado = null;
         totalIVA = null;
         input = null;
-
+        mapa.setDireccion("");
+        
         iva = null;
         subTotal = null;
         total = null;
-
+        
         invMovimientoCab = null;
         invMovimientoCab = new InvMovimientoCab();
         invMovimientoDtlls.clear();
         invMovimientoCab.setInvMovimientoDtllList(invMovimientoDtlls);
-
+        
+        facTmpFactC = null;
+        facTmpFactC = new FacTmpFactC();
+        facTmpFactDs.clear();
+        facTmpFactC.setFacTmpFactDList(facTmpFactDs);
+        
         articulos.clear();
         invMovimientoDtllSeleccionado = null;
-
+        
+        formaPago = null;
+        
         clientes.limpiar();
         cliente.limpiar();
     }
-
-    private CxcCliente obtenerCliente() throws ClienteException {
+    
+    private CxcCliente obtenerCliente() throws EmptyException {
         if (cliente.getCliente() == null) {
-            throw new ClienteException();
+            throw new EmptyException("Por favor seleccione el cliente.");
         }
-
-        return new CxcCliente(userManager.getGnrEmpresa().getCodEmpresa(), cliente.getCliente().getCodCliente());
+        
+        return new CxcCliente(obtenerEmpresa(), cliente.getCliente().getCodCliente());
     }
-
-    private BigDecimal buscarDescuento() {
-        String articulosString = invArticuloFacadeREST.findByArticuloEmpresa(String.class, String.valueOf(invArticuloSeleccionado.getInvArticuloPK().getCodArticulo()), userManager.getGnrEmpresa().getCodEmpresa());
+    
+    private VCliente obtenerVCliente() throws EmptyException {
+        if (cliente.getCliente() == null) {
+            throw new EmptyException("Por favor seleccione el cliente.");
+        }
+        
+        return cliente.getCliente();
+    }
+    
+    private BigDecimal buscarDescuento() throws EmptyException {
+        String articulosString = invArticuloFacadeREST.findByArticuloEmpresa(String.class, String.valueOf(invArticuloSeleccionado.getInvArticuloPK().getCodArticulo()), obtenerEmpresa());
         List<InvArticulo> listaArticulos = gson.fromJson(articulosString, new TypeToken<java.util.List<InvArticulo>>() {
         }.getType());
-
-        String clientesString = vClienteFacadeREST.findByClienteEmpresa(String.class, String.valueOf(cliente.getCliente().getCodCliente()), userManager.getGnrEmpresa().getCodEmpresa());
+        
+        String clientesString = vClienteFacadeREST.findByClienteEmpresa(String.class, String.valueOf(obtenerVCliente().getCodCliente()), obtenerEmpresa());
+        
         List<VCliente> listaClientes = gson.fromJson(clientesString, new TypeToken<java.util.List<VCliente>>() {
         }.getType());
-
+        
         FacDescVolPK facDescVolPK = new FacDescVolPK();
-        facDescVolPK.setCodEmpresa(userManager.getGnrEmpresa().getCodEmpresa());
+        
+        facDescVolPK.setCodEmpresa(obtenerEmpresa());
         facDescVolPK.setCodGrupo(listaClientes.get(0).getCodGrupo());
         facDescVolPK.setCodTipo(listaClientes.get(0).getCodTipo());
         facDescVolPK.setCodGrupo1(listaArticulos.get(0).getInvGrupo3().getInvGrupo3PK().getCodGrupo1());
         facDescVolPK.setCodGrupo2(listaArticulos.get(0).getInvGrupo3().getInvGrupo3PK().getCodGrupo2());
         facDescVolPK.setCodGrupo3(listaArticulos.get(0).getInvGrupo3().getInvGrupo3PK().getCodGrupo3());
-
+        
         StringBuilder id = new StringBuilder();
-
-        id.append("find;codEmpresa=");
+        
+        id.append(
+                "find;codEmpresa=");
         id.append(facDescVolPK.getCodEmpresa());
-        id.append(";");
-        id.append("codGrupo=");
+        id.append(
+                ";");
+        id.append(
+                "codGrupo=");
         id.append(facDescVolPK.getCodGrupo());
-        id.append(";");
-        id.append("codTipo=");
+        id.append(
+                ";");
+        id.append(
+                "codTipo=");
         id.append(facDescVolPK.getCodTipo());
-        id.append(";");
-        id.append("codGrupo1=");
+        id.append(
+                ";");
+        id.append(
+                "codGrupo1=");
         id.append(facDescVolPK.getCodGrupo1());
-        id.append(";");
-        id.append("codGrupo2=");
+        id.append(
+                ";");
+        id.append(
+                "codGrupo2=");
         id.append(facDescVolPK.getCodGrupo2());
-        id.append(";");
-        id.append("codGrupo3=");
+        id.append(
+                ";");
+        id.append(
+                "codGrupo3=");
         id.append(facDescVolPK.getCodGrupo3());
-
+        
         FacDescVol facDescVol = facDescVolFacadeREST.find_JSON(FacDescVol.class, id.toString());
-
-        if (facDescVol != null) {
+        
+        if (facDescVol
+                != null) {
             invArticuloSeleccionado.setDescuento(facDescVol.getPorcDescuento());
         }
-
+        
         return invArticuloSeleccionado.getDescuento();
     }
-
+    
     private BigDecimal findIva() {
         StringBuilder id = new StringBuilder();
-
+        
         id.append("find;codEmpresa=");
-        id.append(userManager.getGnrEmpresa().getCodEmpresa());
+        id.append(obtenerEmpresa());
         id.append(";");
         id.append("codIva=");
         id.append(invArticuloSeleccionado.getCodIva());
-
+        
         InvIva invIva = invIvaFacadeREST.find_JSON(InvIva.class, id.toString());
-
+        
         return invIva.getValor();
     }
-
-    private void calcularSubTotal() {
-
-    }
-
+    
     private List<InvMovimientoDtll> obtenerMovimientos() {
         return invMovimientoDtlls;
     }
-
+    
     private InvMovimientoDtll obtenerMovimientoSeleccionado() {
-        return getInvMovimientoDtllSeleccionado();
+        return invMovimientoDtlls.get(invMovimientoDtlls.indexOf(getInvMovimientoDtllSeleccionado()));
     }
-
+    
     private void calcularResumen() {
         subTotal = 0.0;
         iva = 0.0;
         total = 0.0;
+        totalSinIva = 0.0;
+        totalConIva = 0.0;
         for (InvMovimientoDtll invMovimientoDtll1 : obtenerMovimientos()) {
+            BigDecimal cantidad = BigDecimal.ZERO;
+            if (invMovimientoDtll1.getCantidad() != null) {
+                cantidad = invMovimientoDtll1.getCantidad();
+                logger.info(cantidad.toString());
+            }
+            
             Double descuento = 0.0;
             if (invMovimientoDtll1.getDescuento() != null) {
-                descuento = (invMovimientoDtll1.getCostoUnitario() * invMovimientoDtll1.getCantidad().intValue() * invMovimientoDtll1.getDescuento().intValue()) / 100;
+                descuento = (invMovimientoDtll1.getCostoUnitario() * cantidad.doubleValue() * invMovimientoDtll1.getDescuento().doubleValue()) / 100;
+                logger.info(descuento.toString());
             }
-
+            
             Double _subTotal = Round.round(invMovimientoDtll1.getCostoUnitario() * (invMovimientoDtll1.getCantidad().intValue()) - descuento, 2);
             Double _iva = invMovimientoDtll1.getCostoUnitario() * (invMovimientoDtll1.getPorcentajeIva().doubleValue() / 100);
-
+            
             subTotal += Round.round(_subTotal, 2);
-            iva += Round.round(_iva, 2);
-            total += Round.round(_subTotal + _iva, 2);
+            iva += Round.round(_subTotal * _iva, 2);
+            total += Round.round(_subTotal * (1 + _iva), 2);
         }
-
+        
     }
+    
+    private String obtenerEmpresa() {
+        return userManager.getGnrEmpresa().getCodEmpresa();
+    }
+    
+    private void prepararFacTmpFactC() {
+        Calendar c = Calendar.getInstance();
+        facTmpFactC.setCodCliente(invMovimientoCab.getCxcCliente().getCxcClientePK().getCodCliente().longValue());
+        facTmpFactC.setCodDivisa("01");
+        facTmpFactC.setCodDocumento("FAC");
+        facTmpFactC.setCodPago(invMovimientoCab.getFormaPago());
+        facTmpFactC.setCodVendedor(invMovimientoCab.getCodVendedor());
+        facTmpFactC.setContCred(invMovimientoCab.getDiasPlazo().toString());
+        facTmpFactC.setDescuentos(invMovimientoCab.getDescuentos());
+        facTmpFactC.setEstado("G");
+        facTmpFactC.setFechaEstado(c.getTime());
+        facTmpFactC.setFechaFactura(c.getTime());
+        facTmpFactC.setGnrEmpresa(invMovimientoCab.getGnrEmpresa());
+        facTmpFactC.setIva(invMovimientoCab.getIva());
+        facTmpFactC.setNombreUsuario(invMovimientoCab.getNombreUsuario());
+        facTmpFactC.setNumFactura(null);
+        facTmpFactC.setOtrDescuentos(BigInteger.ZERO);
+        facTmpFactC.setPorcComision(BigDecimal.ZERO);
+        facTmpFactC.setRazonSocial(invMovimientoCab.getRazonSocial());
+        facTmpFactC.setRecargos(BigInteger.ZERO);
+        facTmpFactC.setTipoFactura("A");
+        facTmpFactC.setTotalConIva(invMovimientoCab.getTConIva().longValue());
+        facTmpFactC.setTotalFactura(new BigDecimal(invMovimientoCab.getTotalDocumento()));
+        facTmpFactC.setTotalSinIva(invMovimientoCab.getTSinIva());
+        facTmpFactC.setValorDivisa(BigInteger.ONE);
+        FacTmpFactCPK facTmpFactCPK = new FacTmpFactCPK(invMovimientoCab.getInvMovimientoCabPK().getCodEmpresa(), Integer.parseInt(String.valueOf(invMovimientoCab.getInvMovimientoCabPK().getNumDocumento())), "SAI");
+        facTmpFactC.setFacTmpFactCPK(facTmpFactCPK);
+    }
+    
+    private void prepararFacTmpFactDs(BigDecimal numDocumentoResp) {
+        
+        for (InvMovimientoDtll invMovimientoDtll : invMovimientoDtlls) {
+            FacTmpFactDPK facTmpFactDPK = new FacTmpFactDPK();
+            facTmpFactDPK.setAuxiliar(0L);
+            facTmpFactDPK.setCodEmpresa(obtenerEmpresa());
+            facTmpFactDPK.setEgresoInv(numDocumentoResp.intValue());
+            facTmpFactDPK.setEi("SAI");
+            
+            FacTmpFactD facTmpFactD = new FacTmpFactD();
+            facTmpFactD.setAuxCantidad(invMovimientoDtll.getAuxCantidad());
+            facTmpFactD.setCantidad(invMovimientoDtll.getCantidad().toBigInteger());
+            facTmpFactD.setCantidadDevuelta(BigInteger.ZERO); // TODO
+            facTmpFactD.setCodBodega(invMovimientoDtll.getInvBodegaArt().getInvBodegaArtPK().getCodBodega());
+            facTmpFactD.setCodInventario(codInventario);
+            facTmpFactD.setDetalle(""); // TODO
+            facTmpFactD.setEntregado(""); //TODO
+            facTmpFactD.setFacTmpFactDPK(facTmpFactDPK);
+            facTmpFactD.setFactor(new BigDecimal(invMovimientoDtll.getFactor()));
+            facTmpFactD.setInvUnidadAlternativa(invMovimientoDtll.getInvUnidadAlternativa());
+            facTmpFactD.setOperador(invMovimientoDtll.getOperador());
+            facTmpFactD.setPorcDescPago(BigDecimal.ZERO); //TODO
+            facTmpFactD.setPorcDescProm(BigDecimal.ZERO); //TODO
+            facTmpFactD.setPorcDescVol(BigDecimal.ZERO); //TODO
+            facTmpFactD.setPorcentajeIva(invMovimientoDtll.getPorcentajeIva());
+            facTmpFactD.setPrecioUnitario(BigInteger.ZERO); //TODO
+            facTmpFactD.setPromocion(""); //TODO
+            facTmpFactD.setSerie(""); //TODO
+            facTmpFactD.setTotalReg(BigInteger.ZERO); //TODO
 
-    private String obtenerCodBodega(Integer codArticulo) {
-
-        Map<Integer, String> map = new HashMap< Integer, String>();
-
-        List tmp = new ArrayList();
-        List<InvBodegaArt> lista = obtenerBodegasPorCodArticulo(codArticulo);
-        for (InvBodegaArt invBodegaArt : lista) {
-
-            if (invBodegaArt.getExistencia().intValue() > 0) {
-                logger.info("Codigo Bodega: " + invBodegaArt.getInvBodegaArtPK().getCodBodega());
-                logger.info("Existencia: " + invBodegaArt.getExistencia());
-                logger.info("----------");
-                map.put(invBodegaArt.getExistencia().intValue(), invBodegaArt.getInvBodegaArtPK().getCodBodega());
+            facTmpFactDs.add(facTmpFactD);
+        }
+    }
+    
+    private void prepararInvMovimientoCab(BigDecimal numDocumentoResp) throws EmptyException {
+        CxcCliente cxcCliente = obtenerCliente();
+        invMovimientoCab.setCxcCliente(cxcCliente);
+        
+        if (invMovimientoCab.getFormaPago() == null) {
+            throw new EmptyException("Por favor seleccione la forma de pago.");
+        }
+        
+        if (mapa.getDireccion() == null) {
+            throw new EmptyException("Por favor active el GPS y seleccione Geolocalizar.");
+        }
+        
+        InvMovimientoCabPK invMovimientoCabPK = new InvMovimientoCabPK();
+        invMovimientoCabPK.setCodEmpresa(obtenerEmpresa());
+        invMovimientoCabPK.setCodDocumento("SAI");
+        invMovimientoCabPK.setNumDocumento(numDocumentoResp.longValue());
+        invMovimientoCab.setAutoContDoc(null);
+        invMovimientoCab.setAutoContImprDoc(null);
+        invMovimientoCab.setDescuentos(BigInteger.ZERO);
+        invMovimientoCab.setDetalle(new StringBuilder("FAC ").append(obtenerVCliente().getRazonSocial()).toString());
+        invMovimientoCab.setDigitadoPor(userManager.getUserName());
+        invMovimientoCab.setDiasPlazo(1);
+        invMovimientoCab.setEstado("G");
+        invMovimientoCab.setFechEmisDoc(null);
+        invMovimientoCab.setFechCaduDoc(null);
+        invMovimientoCab.setFechaVencimiento(null);
+        invMovimientoCab.setFechaEmision(Calendar.getInstance().getTime());
+        invMovimientoCab.setFechaEstado(Calendar.getInstance().getTime());
+        invMovimientoCab.setFletes(BigInteger.ZERO);
+        
+        GnrDivisa gnrDivisa = new GnrDivisa("01", obtenerEmpresa());
+        invMovimientoCab.setGnrDivisa(gnrDivisa);
+        InvTransacciones invTransacciones = new InvTransacciones(obtenerEmpresa(), "20");
+        invMovimientoCab.setInvTransacciones(invTransacciones);
+        invMovimientoCab.setInvMovimientoCabPK(invMovimientoCabPK);
+        invMovimientoCab.setInvProveedor(null);
+        invMovimientoCab.setIva(BigInteger.ZERO);
+        invMovimientoCab.setNumRetencion(null);
+        invMovimientoCab.setNumFactRete(null);
+        invMovimientoCab.setNroCuotas(null);
+        invMovimientoCab.setReferencia("FAC");
+        invMovimientoCab.setOtrDescuentos(BigInteger.ZERO);
+        invMovimientoCab.setOtrCargos(BigInteger.ZERO);
+        invMovimientoCab.setRetencion(BigInteger.ZERO);
+        invMovimientoCab.setRecargos(BigInteger.ZERO);
+        invMovimientoCab.setTConIva(BigDecimal.valueOf(totalConIva).toBigInteger());
+        invMovimientoCab.setTSinIva(BigDecimal.valueOf(totalSinIva).toBigInteger());
+        invMovimientoCab.setTotalDocumento(BigDecimal.valueOf(total).toBigInteger());
+        
+        invMovimientoCab.setCodVendedor(obtenerVendedor());
+        invMovimientoCab.setNombreUsuario(obtenerUsuario());
+        invMovimientoCab.setRazonSocial(clientes.getCliente().getCliente().getRazonSocial());
+        
+        logger.log(Level.INFO, "enviar ::::::::::::::: {0} articulos", invMovimientoCab.getInvMovimientoDtllList().size());
+    }
+    
+    private void prepararInvMovimientoDtlls(BigDecimal numDocumentoResp) throws EmptyException {
+        if (invMovimientoDtlls.isEmpty()) {
+            throw new EmptyException("Por favor seleccione al menos un artículo.");
+        }
+        
+        Double subtotal = 0.0;
+        for (InvMovimientoDtll invMovimientoDtll : invMovimientoDtlls) {
+            InvBodegaArt invBodegaArt = invMovimientoDtll.getInvBodegaArt();
+            
+            String codBodega = new BodegaUtil().obtenerCodBodega(invMovimientoDtll.getInvArticulo().getInvArticuloPK().getCodArticulo());
+            
+            logger.log(Level.INFO, "codBodega recuperado: {0}", codBodega);
+            
+            invBodegaArt.getInvBodegaArtPK().setCodBodega(codBodega);
+            
+            subtotal = subtotal + invMovimientoDtll.getCostoTotal();
+            
+            InvMovimientoDtllPK invMovimientoDtllPK = new InvMovimientoDtllPK(obtenerEmpresa(), "SAI", numDocumentoResp.longValue(), Short.valueOf(String.valueOf(invMovimientoDtlls.indexOf(invMovimientoDtll) + 1)));
+            invMovimientoDtll.setInvMovimientoDtllPK(invMovimientoDtllPK);
+            
+            if (invMovimientoDtll.getDescuento() == null) {
+                invMovimientoDtll.setDescuento(BigDecimal.ZERO);
+            }
+            
+            if (invMovimientoDtll.getInvMovimientoDtllPK() != null) {
+                logger.log(Level.INFO, "InvMovimientoDtllPK: {0}", invMovimientoDtll.getInvMovimientoDtllPK().toString());
+            } else {
+                logger.info("InvMovimientoDtllPK: null");
             }
         }
-
-        for (Integer existencia : map.keySet()) {
-            tmp.add(existencia);
-        }
-
-        Collections.sort(tmp, new Comparator<Long>() {
-            @Override
-            public int compare(Long o1, Long o2) {
-                return o2.compareTo(o1);
-            }
-        });
-
-        return map.get(tmp.get(0));
+        
+        invMovimientoCab.setSubtotal(subtotal);
     }
-
-    private List<InvBodegaArt> obtenerBodegasPorCodArticulo(Integer codArticulo) {
-        InvBodegaArtFacadeREST invBodegaArtFacadeREST = new InvBodegaArtFacadeREST();
-        String result = invBodegaArtFacadeREST.findByCodArticulo_JSON(String.class, String.valueOf(codArticulo));
-        GsonBuilder builder = new GsonBuilder();
-        Gson gson = builder.setDateFormat("yyyy-MM-dd").create();
-        List<InvBodegaArt> invBodegaArts = gson.fromJson(result, new TypeToken<List<InvBodegaArt>>() {
+    
+    private FacParametros obtenerFacParametros() {
+        String facParametrosString = facParametrosFacadeREST.findAll_JSON(String.class);
+        List<FacParametros> listaFacParametros = gson.fromJson(facParametrosString, new TypeToken<java.util.List<FacParametros>>() {
         }.getType());
-        return invBodegaArts;
-    }
-
-    private Integer obtenerExistenciaPorCodArticulo() {
-
+        
+        for (FacParametros facParametros : listaFacParametros) {
+            if (facParametros.getFacParametrosPK().getNombreUsuario().toLowerCase().
+                    equals(userManager.getCurrent().getNombreUsuario().toLowerCase())
+                    && facParametros.getFacParametrosPK().getCodEmpresa().
+                    equals(obtenerEmpresa())) {
+                logger.log(Level.INFO, "facParametros: {0}", facParametros);
+                return facParametros;
+            }
+        }
         return null;
+    }
+    
+    private Integer obtenerVendedor() {
+        Integer defCodVendedor = obtenerFacParametros().getDefCodVendedor();
+        logger.log(Level.INFO, "codVendedor: {0}", defCodVendedor);
+        return defCodVendedor;
+    }
+    
+    private GnrUsuarios obtenerUsuario() {
+        GnrUsuarios gnrUsuarios = obtenerFacParametros().getGnrUsuarios();
+        logger.log(Level.INFO, "gnrUsuarios: {0}", gnrUsuarios);
+        return gnrUsuarios;
     }
 }
